# aris

./: .env.example  .gitignore  ABSOLUTE_PATHS.txt  AGENT2_HANDOFF.md  AGENT3-SIGN-OFF.md  AGENT8-DEDUP-VALIDATION-COMPLETE.md  AGENT9_DELIVERABLES_INDEX.md  ARIS-COMPLETE-SYSTEM-DESIGN.md  ARIS-DELIVERY-COMPLETE.md  BUG_FIX_VERIFICATION.md  CIRCULAR_IMPORT_FIX.md  COST_ESTIMATION_GAP_ANALYSIS.md  COST_TRACKING_CODE_REFERENCE.md  COST_TRACKING_VERIFICATION_REPORT.md  COST_VERIFICATION_SUMMARY.txt  CYCLE-EXECUTION-ROADMAP.md  CYCLE1-SESSION-HANDOFF.md  CYCLE2-SESSION-HANDOFF.md  CYCLE3-COMPLETION-README.md  CYCLE3-SESSION-HANDOFF.md  CYCLE3-START.md  CYCLE4-SESSION-HANDOFF.md  CYCLE4-START.md  CYCLE5-SESSION-HANDOFF.md  CYCLE5-START.md  CYCLE6-SESSION-HANDOFF.md  CYCLE6-START.md  CYCLE7-START.md  DEDUPLICATION-VALIDATION-INDEX.md  DELIVERABLES.txt  DEPLOYMENT-GUIDE.md  DEVELOPER-GUIDE.md  IMPLEMENTATION_RESULTS.md  IMPLEMENTATION_SESSION_MANAGER.md  MCP_INTEGRATION_VERIFICATION_REPORT.md  MCP_QUICK_REFERENCE.md  MVP-COMPLETION-SUMMARY.md  NEXT-SESSION-PRIORITIES.md  PRODUCTION-BLOCKERS-CHECKLIST.md  PRODUCTION-READINESS-EXECUTIVE-SUMMARY.md  (+51 more)
.serena/: project.yml
alembic/: README  env.py
claudedocs/: AGENT-4-HANDOFF.md  AGENT1-HANDOFF-CONFIGURATION.md  AGENT2-SEQUENTIAL-MCP-HANDOFF.md  AGENT2-SETUP-INSTRUCTIONS.md  AGENT3-ORCHESTRATOR-HANDOFF.md  AGENT_3_COMPLETION_SUMMARY.md  AGENT_3_HANDOFF.md  ARIS-Architecture-Blueprint.md  ARIS-SYSTEM-COMPLETE.md  Architectural-Decisions.md  BUDGET_LIMIT_FIELD_IMPLEMENTATION.md  CHALLENGE-REPORT-CIRCULAR-IMPORT-FIX.md  CIRCULAR-IMPORT-VALIDATION-FINAL.md  CIRCULAR-IMPORT-VALIDATION-REPORT.md  CLI-FAILURE-DIAGNOSIS.md  CLI-FIX-ROADMAP.md  CLI-FIX-SUMMARY.md  CLI-Interface-Specification.md  CLI-TEST-VERIFICATION.txt  CLI-VERIFICATION-RESULTS.md  COST-TRACKING-ARCHITECTURE.md  PERFORMANCE-PROFILE.md  (+63 more)
(+107 files in other folders)
